# ntt-authen-server

./: .gitignore  README.md  help.py  ntt-authen-server.code-workspace  package.json  pyproject.toml
config/: args.py  constants.py  logger.py  utils.py
nodelib/@types/ntt-server-middleware/: index.d.ts
nodelib/ntt-server-middleware/: package.json
ntt_server/: .dev.env  .prod.env  .test.env  alembic.ini  conftest.py  dev_db.sqlite  requirements.txt  server.py
ntt_server/app/api/: user.py
ntt_server/app/core/: __init__.py  logger.py  setting.py
ntt_server/app/db/: session.py
ntt_server/app/middlewares/: logging_middleware.py
ntt_server/app/models/: user.py
ntt_server/app/schemas/: user.py
ntt_server/app/services/: __init__.py
ntt_server/app/utils/: __init__.py  id_utils.py  password_hash_utils.py
ntt_server/depends/: utils.py
ntt_server/migrations/: env.py
ntt_server/migrations/versions/: fc6ed4bad906_auto_update.py
ntt_server/tests/: test_pass.py
openspec/: project.md
openspec/changes/add-authentication-system/: proposal.md  tasks.md
openspec/changes/add-authentication-system/specs/authentication-server/: spec.md
openspec/changes/add-authentication-system/specs/client-libraries/: spec.md
openspec/changes/add-project-management-utilities/: proposal.md  tasks.md
openspec/changes/add-project-management-utilities/specs/project-management-tools/: spec.md
